--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e2903114-8c40-4deb-a20f-aa0de174b497"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
