--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.13",
     "@ngx-progressbar/core": "^3.0.2",
     "@ngx-progressbar/http-client": "^3.0.2",
+    "angular-token": "^7.0.1",
     "bootstrap": "^5.0.1",
     "font-awesome": "^4.7.0",
     "popper": "^1.0.1",
